// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 grSZPI"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 hFglG"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a hint color 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 gyBSjj"
    color="hint"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a info color 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 flmOZT"
    color="info"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 grSZPI"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="RadioButton-sc-jdab1i-0 bjYldd"
    color="warning"
    type="radio"
  />
</div>
`;
